---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2024-09-29
  Features:
    - Added personal roboports mk3 and mk4
    - Added more uses to neodymium magnets
  Bugfixes:
    - Updated military tech tree and recipes
    - Updated ai core recipe
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2024-09-28
  Bugfixes:
    - blocked decomposition for recipes with multiple outputs. The total raw calculation in recipes resulted in "Too complex" error.
    - light emitting diode is now researched with advanced electronics 2
    - Reduced size of mod from 250 MB to 50 MB
    - Fixed contact link
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2024-09-28
  Features:
    - Created new recipe category for 3 fluids
  Bugfixes:
    - military tech cards has now the krastorio 2 recipe (recipes in military tech branch still need to be updated)
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2024-09-27
  Bugfixes:
    - Blunagium is now spawning on the map
    - Added localization (en) for resources
    - Updated info.json
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2024-09-26
  Features:
    - Starting alpha version