@@ -7,6 +7,7 @@ Date: 2024-09-29
   Bugfixes:
     - Updated military tech tree and recipes
     - Updated ai core recipe
+    - Deuterium recipe unlocked with fusion energy tech
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: 2024-09-28
